infra/linkerd/manifests.yaml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: linkerd-viz
  namespace: linkerd-viz
  annotations:
    nginx.ingress.kubernetes.io/upstream-vhost: $service_name.$namespace.svc.cluster.local:8084
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header Origin "";
      proxy_hide_header l5d-remote-ip;
      proxy_hide_header l5d-server-id;
spec:
  ingressClassName: nginx
  rules:
    - host: linkerd.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 8084
---
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  name: prometheus-grafana-admin
  namespace: linkerd-viz
spec:
  requiredAuthenticationRefs:
    - kind: ServiceAccount
      name: grafana
      namespace: grafana
  targetRef:
    group: policy.linkerd.io
    kind: Server
    name: prometheus-admin
